--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -12,7 +12,7 @@ const navItems = [
 const carouselItems = [
   { icon: '🚀', text: 'Bienvenidos a Conecta Internacional' },
   { icon: '📞', text: 'Llámanos al +56 9 5335 2667' },
-  { icon: '📧', text: 'Escríbenos a contacto@conecta.com' }
+  { icon: '📧', text: 'Escríbenos a conectacontacto@conectainternacional.cl' }
 ];
 ---
 
