--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -45,7 +45,7 @@ const description = "Ponte en contacto con Conecta Internacional, tu aliado emer
             <div class="card-body text-center">
               <i class="bi bi-envelope fs-1 text-primary mb-3"></i>
               <h3 class="card-title h5 fw-bold">Email</h3>
-              <p class="card-text">info@conectainternacional.com</p>
+              <p class="card-text">conectacontacto@conectainternacional.cl</p>
             </div>
           </div>
         </div>
