--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const { description = "Conecta Internacional: Soluciones integrales en comercio 
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+		<meta name="google-site-verification" content="Py8Yl7i5TIJbwnb8qF_xNptplRPM1weG-OcEP1JVAbg" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
